--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   http: ^0.12.0+2
   flutter_webview_plugin: ^0.3.3
+  flutter_staggered_grid_view: ^0.2.7
 
 dev_dependencies:
   flutter_test:
